[package]
name = "kudo"
version = "0.4.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"
license = "Zlib"
repository = "https://github.com/kettle11/kudo"
readme = "README.md"
keywords = ["ecs", "entity", "component", "game"]
categories = ["game-engines", "game-development", "data-structures"]
description = "A minimalist Entity Component System. (Work in Progress)"

[dependencies]
ktasks = {path = "../ktasks", optional = true}

[dev-dependencies]
bencher = "0.1.5"

[features]
default = []
scheduler = ["ktasks"]

[[bench]]
name = "bench"
harness = false